@@ -1,2 +1,6 @@
 # projectLambda
 private repo, IS 102 / 103 project.
+
+Run projectLAMBDA.jar in Terminal by this command:
+
+java -jar --enable-preview projectLAMBDA.jar
